# a2a-x402

./: README.md
.github/workflows/: public_pypi_x402_a2a.yml  python-examples-adk-demo.yml  python-x402-a2a.yml  release-please.yml
examples/python/simple/: pyproject.toml
examples/python/simple/client/: agent.py  remote_a2a_agent.py
examples/python/simple/server/: a2a_executor.py  a2a_monkey.py  agent.py  main.py  x402_seller_executor.py
python/examples/adk-demo/: README.md
python/examples/adk-demo/client_agent/: _remote_agent_connection.py  client_agent.py  wallet.py
python/examples/adk-demo/server/agents/: _adk_agent_executor.py  adk_merchant_agent.py  mock_facilitator.py  routes.py  x402_merchant_executor.py
python/x402_a2a/: __init__.py  extension.py  pyproject.toml
python/x402_a2a/core/: agent.py  helpers.py  merchant.py  protocol.py  utils.py  wallet.py
python/x402_a2a/executors/: __init__.py  base.py  client.py  server.py
python/x402_a2a/tests/: test_core.py
python/x402_a2a/type_defs/: errors.py
python/x402_a2a/types/: __init__.py  config.py  errors.py
schemes/: scheme_exact_lightning.md
